syntax = "proto3";
option go_package = "gofr.dev/examples/grpc/grpc-server/server";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service Hello {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}

service ChatService {
  rpc ServerStream(Request) returns (stream Response);
  rpc ClientStream(stream Request) returns (Response);
  rpc BiDiStream(stream Request) returns (stream Response);
}

message Request {
  string message = 1;
}

message Response {
  string message = 1;
}
